terraform/backup/09-multiple-ec2-instances/main.tf
provider "aws" {
  region = "us-east-1"
  //version = "~> 2.46"
}

resource "aws_default_vpc" "default" {

  tags = {
    yor_trace = "b61d6a01-8d89-4593-a9c5-c940533b57a9"
  }
}

resource "aws_security_group" "http_server_sg" {
  name = "http_server_sg"
  //vpc_id = "vpc-c49ff1be"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name      = "http_server_sg"
    yor_trace = "da509888-85b1-4858-b14e-251f07e07d73"
  }
}

resource "aws_instance" "http_server" {
  #ami                   = "ami-062f7200baf2fa504"
  count                  = 2
  ami                    = data.aws_ami.aws_linux_2_latest.id
  key_name               = "default-ec2"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.http_server_sg.id]

  //subnet_id              = "subnet-3f7b2563"
  subnet_id = tolist(data.aws_subnet_ids.default_subnets.ids)[0]
  tags = {
    yor_trace = "226fc62d-8da4-40c4-8287-7ee297119c37"
  }
}
